# margin-report

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: binance.rs  config.rs  error.rs  main.rs  margin_data.rs  redis.rs  report.rs  report_processor.rs  structs.rs  telegram.rs  utils.rs
test_fixtures/: candles.json  long_short_ratio.json  open_interest.json
